--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -42,7 +42,7 @@
             {% elif img.status == 'Dead' %} border-danger
             {% else %} border-warning 
             {% endif %}
-            style="background-color:#2e3f51; color:#cfd8dc; max-width: 540px;">
+            style="background-color:#d5dbdb; color:#4c6783; max-width: 540px;">
     
                 <div class="row g-0">
                     <div class="col-md-4">
