--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -38,9 +38,12 @@
         {% else %} {% for img in images %}
         <div class="col">
             <div class="card mb-3 ms-5"
-            {% if img.status == 'Alive' %} border-success
+            {% if img.status == 'Alive' %}
+                    border: 2px solid green; {% endif %} 
             {% elif img.status == 'Dead' %} border-danger
+                    border: 2px solid red; {% endif %}
             {% else %} border-warning 
+                  border:2px solid orange; {% endif %}
             {% endif %}
             style="background-color:#d5dbdb; color:#4c6783; max-width: 540px;">
     
