--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -40,9 +40,9 @@
             <div class="card mb-3 ms-5"
             {% if img.status == 'Alive' %}
                     border: 2px solid green; {% endif %} 
-            {% elif img.status == 'Dead' %} border-danger
+            {% elif img.status == 'Dead' %}
                     border: 2px solid red; {% endif %}
-            {% else %} border-warning 
+            {% else %} 
                   border:2px solid orange; {% endif %}
             {% endif %}
             style="background-color:#d5dbdb; color:#4c6783; max-width: 540px;">
