--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,5 +5,7 @@
 {% endif %}
 <p class="text-center">
     Mirá las imágenes desde <a href="{% url 'home' %}">este link.</a>
+    <p class="text-center">
+        si tenes un usuario ingresa a <a href="{% url 'login' %}">este link.</a>
 </p>
 {% endblock %}
