commit login y logout

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,6 +6,6 @@
 <p class="text-center">
     Mirá las imágenes desde <a href="{% url 'home' %}">este link.</a>
     <p class="text-center">
-        si tenes un usuario ingresa a <a href="{% url 'login' %}">este link.</a>
+        Si tenes un usuario ingresa a <a href="{% url 'login' %}">este link.</a>
 </p>
 {% endblock %}
